add more user info
add birthday date and phone number

--- a/WebApp/appsettings.json
+++ b/WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DbConnection": "Server=(localdb)\\mssqllocaldb;Database=AS;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DbConnection": "Server=(localdb)\\mssqllocaldb;Database=NetClit;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
